# resa_torch

./: .gitignore  ReadMe.md  pyproject.toml
configs/: resa_culane.yaml  resa_tusimple.yaml
resa_torch/: __init__.py
resa_torch/datasets/: __init__.py  culane.py  registry.py  transforms.py  tusimple.py
resa_torch/engine/: evaluator.py  poly_lr.py  trainer.py
resa_torch/model/: __init__.py
resa_torch/model/aggregator/: __init__.py  resa_aggregator.py
resa_torch/model/backbone/: __init__.py  resnet.py
resa_torch/model/decoder/: __init__.py  busd_decoder.py  plain_decoder.py  registry.py
resa_torch/model/head/: __init__.py  exist_head.py
resa_torch/model/loss/: __init__.py  dice_loss.py  resa_loss.py
resa_torch/model/net/: __init__.py  resa.py
resa_torch/utils/: __init__.py  config.py  data.py  metrics.py  postprocessing.py  registry.py  seed.py  tusimple_eval.py  visualization.py
tools/: evaluate.py  test.py  train.py
